--- a/.github/workflows/pdfworkflow.yml
+++ b/.github/workflows/pdfworkflow.yml
@@ -3,7 +3,7 @@ name: Geração de Questões a partir de PDF
 on:
   push:
     paths:
-      - 'pdfreader/pdfs/*.pdf'
+      - 'pdfreader/pdfs/**/*.pdf'
     branches:
       - main
 
@@ -26,7 +26,7 @@ jobs:
 
       - name: 🧠 Processar PDF e gerar questões
         run: |
-          python scripts/process_pdf.py pdfs/seuarquivo.pdf questions.json
+          python scripts/process_pdf.py pdfreader/pdfs questions.json
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
