--- a/.github/workflows/pdfworkflow.yml
+++ b/.github/workflows/pdfworkflow.yml
@@ -6,7 +6,7 @@ on:
       - 'pdfreader/pdfs/**/*.pdf'
       - 'pdfreader/pdfs/**/*.md'
     branches:
-      - main
+      - main-shutdown
 
 jobs:
   gerar_questoes:
