--- a/.github/workflows/questions.yml
+++ b/.github/workflows/questions.yml
@@ -42,3 +42,8 @@ jobs:
           git add questions.json
           git diff --cached --quiet || git commit -m "🤖 Atualização automática do questions.json"
           git push origin main
+  
+  call-deploy-quiz:
+    needs: gerar-questions
+    uses: ./.github/workflows/deploy-quizzes.yml
+
